<resources>
    <string name="app_name">Tea Memory</string>
    <string name="main_action_settings">Settings</string>
    <string name="main_action_about">About</string>
    <string name="main_action_export">Export/Import Teas</string>
    <string name="main_sort">Sort</string>
    <string name="main_error_deletion">Deletion could not be performed.</string>
    <string name="main_tooltip_newtea">Add tea</string>
    <string name="main_dialog_problem_header">Problem</string>
    <string name="main_dialog_problem">Hey, you are using Android 8 or higher. With these versions, Android has introduced new features that cause problems running this app.</string>
    <string name="main_dialog_problem_checkbox">Do not show me again!</string>
    <string name="main_dialog_problem_ok">Solve the problem</string>
    <string name="main_dialog_problem_cancle">Not now</string>
    <string name="main_dialog_rating_header">Rate this app</string>
    <string name="main_dialog_rating">Do you like the app? I would look forward to a review.</string>
    <string name="main_dialog_rating_positive">Rate now</string>
    <string name="main_dialog_rating_neutral">Later</string>
    <string name="main_dialog_rating_negative">No, thanks</string>
    <string name="showtea_heading">Information</string>
    <string name="showtea_action_note">Note</string>
    <string name="showtea_dialog_note_hint">Write down something.</string>
    <string name="showtea_dialog_note_ok">OK</string>
    <string name="showtea_dialog_note_cancle">Cancle</string>
    <string name="showtea_action_edit">Edit</string>
    <string name="showtea_action_counter">Drinking behavior</string>
    <string name="showtea_dialog_counter_day">Today</string>
    <string name="showtea_dialog_counter_week">This week</string>
    <string name="showtea_dialog_counter_month">This month</string>
    <string name="showtea_dialog_counter_overall">Overall</string>
    <string name="showtea_dialog_counter_ok">OK</string>
    <string name="showtea_dialog_description_header">How to use.</string>
    <string name="showtea_dialog_description_temperature">Calculating the time the boiling water needs to cool to the desired temperature.</string>
    <string name="showtea_dialog_description_amount">Calculate the amount of tea required for the preparation.</string>
    <string name="showtea_dialog_description_infusion">Select the desired infusion.</string>
    <string name="showtea_dialog_description_checkbox">Do not show me again!</string>
    <string name="showtea_dialog_description_ok">OK</string>
    <string name="showtea_display_celsius">%1$s °C</string>
    <string name="showtea_display_fahrenheit">%1$s °F</string>
    <string name="showtea_display_ts">%1$s ts/L</string>
    <string name="showtea_display_gr">%1$s g/L</string>
    <string name="showtea_dialog_amount">Amount</string>
    <string name="showtea_dialog_amount_scala_left">0.0l</string>
    <string name="showtea_dialog_amount_scala_center">1.0l</string>
    <string name="showtea_dialog_amount_scala_right">2.0l</string>
    <string name="showtea_dialog_amount_per_amount_ts">%1$.1f ts / %2$.1f L</string>
    <string name="showtea_dialog_amount_per_amount_gr">%1$.1f g / %2$.1f L</string>
    <string name="showtea_dialog_amount_ok">OK</string>
    <string name="showtea_display_min">Min</string>
    <string name="showtea_display_sec">Sec</string>
    <string name="showtea_first_infusion_index">1.</string>
    <string name="showtea_break_count_point">%1$d.</string>
    <string name="showtea_infusion_count_title">Please choose your infusion</string>
    <string name="showtea_infusion_index_content">Infusion</string>
    <string name="showtea_cooldown_title">Cooling period</string>
    <string name="showtea_cooldown_text">For green or white tea the boiling water should be cool down before infuse the tea.</string>
    <string name="showtea_cooldown_ok">OK</string>
    <string name="showtea_error_text">Error displaying elements.</string>
    <string name="showtea_double_point">\u0020\u0020:\u0020\u0020</string>
    <string name="showtea_timer_start">Start</string>
    <string name="showtea_timer_reset">Reset</string>
    <string name="showtea_tea_ready">Ready</string>
    <string name="showtea_tooltip_notification">Notification</string>
    <string name="showtea_tooltip_vibration">Vibration</string>
    <string name="showtea_tooltip_note">Note</string>
    <string name="showtea_tooltip_exchange">Cooldown time</string>
    <string name="showtea_tooltip_calculateamount">Calculate amount</string>
    <string name="showtea_tooltip_infusion">Choose infusion</string>
    <string name="showtea_tooltip_nextinfusion">Next infusion</string>
    <string name="showtea_channel_name">Finished tea</string>
    <string name="showtea_channel_description">Will be shown when the tea is ready.</string>
    <string name="showtea_content_description_steam">steam</string>
    <string name="showtea_content_description_cup">cup</string>
    <string name="showtea_content_description_filling">filling</string>
    <string name="showtea_content_description_temperature">thermometer</string>
    <string name="showtea_content_description_amount">spoon</string>
    <string name="showtea_content_description_infusion">cup</string>
    <string name="newtea_heading">Create/Edit tea</string>
    <string name="newtea_tea_variety">Tea variety</string>
    <string name="newtea_by_hand">by hand</string>
    <string name="newtea_hint_name">Name</string>
    <string name="newtea_color_label">Color</string>
    <string name="newtea_color_dialog_title">Choose Color: </string>
    <string name="newtea_hint_celsius_blacktea">Temperature (95 &#8211; 100°C)</string>
    <string name="newtea_hint_celsius_greentea">Temperature (60 &#8211; 90°C)</string>
    <string name="newtea_hint_celsius_yellowtea">Temperature (75°C)</string>
    <string name="newtea_hint_celsius_whitetea">Temperature (70 &#8211; 80°C)</string>
    <string name="newtea_hint_celsius_oolongtea">Temperature (75 &#8211; 90°C)</string>
    <string name="newtea_hint_celsius_puerhtea">Temperature (100°C)</string>
    <string name="newtea_hint_celsius_herbaltea">Temperature (100°C)</string>
    <string name="newtea_hint_celsius_fruittea">Temperature (100°C)</string>
    <string name="newtea_hint_celsius_rooibustea">Temperature (100°C)</string>
    <string name="newtea_hint_celsius_other">Temperature (°C)</string>
    <string name="newtea_hint_fahrenheit_blacktea">Temperature (203 &#8211; 212°F)</string>
    <string name="newtea_hint_fahrenheit_greentea">Temperature (140 &#8211; 194°F)</string>
    <string name="newtea_hint_fahrenheit_yellowtea">Temperature (167°C)</string>
    <string name="newtea_hint_fahrenheit_whitetea">Temperature (158 &#8211; 176°F)</string>
    <string name="newtea_hint_fahrenheit_oolongtea">Temperature (167 &#8211; 194°F)</string>
    <string name="newtea_hint_fahrenheit_puerhtea">Temperature (212°F)</string>
    <string name="newtea_hint_fahrenheit_herbaltea">Temperature (212°F)</string>
    <string name="newtea_hint_fahrenheit_fruittea">Temperature (212°F)</string>
    <string name="newtea_hint_fahrenheit_rooibustea">Temperature (212°F)</string>
    <string name="newtea_hint_fahrenheit_other">Temperature (°F)</string>
    <string name="newtea_hint_cooldowntime">Cooldown time "mm:ss" or "mm"</string>
    <string name="newtea_hint_ts_blacktea">Amount  (3 &#8211; 5ts/L)</string>
    <string name="newtea_hint_ts_greentea">Amount (6 &#8211; 8ts/L)</string>
    <string name="newtea_hint_ts_yellowtea">Amount (4 &#8211; 5ts/L)</string>
    <string name="newtea_hint_ts_whitetea">Amount (3 &#8211; 4ts/L)</string>
    <string name="newtea_hint_ts_oolongtea">Amount (4 &#8211; 6ts/L)</string>
    <string name="newtea_hint_ts_puerhtea">Amount (4 &#8211; 6ts/L)</string>
    <string name="newtea_hint_ts_herbaltea">Amount (4 &#8211; 6ts/L)</string>
    <string name="newtea_hint_ts_fruittea">Amount (8 &#8211; 10ts/L)</string>
    <string name="newtea_hint_ts_rooibustea">Amount (4 &#8211; 6ts/L)</string>
    <string name="newtea_hint_ts_other">Amount ts/L</string>
    <string name="newtea_hint_gr_blacktea">Amount  (8 &#8211; 13g/L)</string>
    <string name="newtea_hint_gr_greentea">Amount (10 &#8211; 14g/L)</string>
    <string name="newtea_hint_gr_yellowtea">Amount (10 &#8211; 12g/L)</string>
    <string name="newtea_hint_gr_whitetea">Amount (8 &#8211; 12g/L)</string>
    <string name="newtea_hint_gr_oolongtea">Amount (10 &#8211; 12g/L)</string>
    <string name="newtea_hint_gr_puerhtea">Amount (8 &#8211; 12g/L)</string>
    <string name="newtea_hint_gr_herbaltea">Amount (10 &#8211; 15g/L)</string>
    <string name="newtea_hint_gr_fruittea">Amount (15 &#8211; 20g/L)</string>
    <string name="newtea_hint_gr_rooibustea">Amount (12 &#8211; 15g/L)</string>
    <string name="newtea_hint_gr_other">Amount g/L</string>
    <string name="newtea_hint_time_blacktea">Steeping time "mm:ss" or "mm" (3 &#8211; 5min)</string>
    <string name="newtea_hint_time_greentea">Steeping time "mm:ss" or "mm" (1 &#8211; 3min)</string>
    <string name="newtea_hint_time_yellowtea">Steeping time "mm:ss" or "mm" (1 &#8211; 3min)</string>
    <string name="newtea_hint_time_whitetea">Steeping time "mm:ss" or "mm" (1 &#8211; 4min)</string>
    <string name="newtea_hint_time_oolongtea">Steeping time "mm:ss" or "mm" (0:30 &#8211; 4min)</string>
    <string name="newtea_hint_time_puerhtea">Steeping time "mm:ss" or "mm" (5 &#8211; 15sec)</string>
    <string name="newtea_hint_time_herbaltea">Steeping time "mm:ss" or "mm" (5 &#8211; 10min)</string>
    <string name="newtea_hint_time_fruittea">Steeping time "mm:ss" or "mm" (5 &#8211; 10min)</string>
    <string name="newtea_hint_time_rooibustea">Steeping time "mm:ss" or "mm" (5 &#8211; 10min)</string>
    <string name="newtea_hint_time_other">Steeping time "mm:ss" or "mm"</string>
    <string name="newtea_error_30Char">The type of tea exceeds the limit number of 30 characters.</string>
    <string name="newtea_error_name">The name exceeds the limit number of 300 characters.</string>
    <string name="newtea_error_wrong_celsius">The temperature should be between 0 °C and 100 °C.</string>
    <string name="newtea_error_wrong_fahrenheit">The temperature should be between 32 °F and 212 °F.</string>
    <string name="newtea_error_auto_cooldown_time">Cooldown time can not be determined.</string>
    <string name="newtea_error_cooldown_time">Please follow the format of the cooldown time.</string>
    <string name="newtea_error_time_format">Please follow the format of the steeping time.</string>
    <string name="newtea_error_amount">The amount should not be more than three digits.</string>
    <string name="newtea_error_cant_change">Change could not be performed.</string>
    <string name="newtea_tooltip_arrowleft">Previous infusion</string>
    <string name="newtea_tooltip_arrowright">Next infusion</string>
    <string name="newtea_tooltip_deleteinfusion">Delete infusion</string>
    <string name="newtea_tooltip_addinfusion">Add infusion</string>
    <string name="newtea_tooltip_showcooldowntime">Show cooldown option</string>
    <string name="newtea_tooltip_autofillcooldowntime">Autofill cooldown time</string>
    <string name="exportimport_import_dialog_delete_desciption">Delete all stored teas and take over only the new ones.</string>
    <string name="exportimport_import_dialog_delete_button">Delete stored Teas</string>
    <string name="exportimport_import_dialog_keep_desciption">Keep the stored teas and add the new ones.</string>
    <string name="exportimport_import_dialog_keep_button">Keep stored Teas</string>
    <string name="contact_about_me">Hello, I am Pascal and I have developed the Tea Memory in my spare time. For questions or suggestions write me an email.</string>
    <string name="contact_email">Send me an email.</string>
    <string name="contact_content_description_photo">photo</string>
</resources>