<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.main.Main">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/main_action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exportImport"
        android:orderInCategory="2"
        android:title="@string/main_action_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="3"
        android:title="@string/main_action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="4"
        android:icon="@drawable/button_sort"
        android:title="Sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="5"
        android:icon="@drawable/search_white"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

</menu>