<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:text="@string/exportimport_import_dialog_delete_desciption"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:text="@string/exportimport_import_dialog_keep_desciption"
        android:textColor="#000000"/>
</LinearLayout>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonImportDelete"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        style="?android:attr/borderlessButtonStyle"
        android:gravity="center_horizontal"
        android:text="@string/exportimport_import_dialog_delete_button"
        android:textColor="@color/colorPrimary"
        android:background="#FFFFFF"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonImportKeep"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        style="?android:attr/borderlessButtonStyle"
        android:gravity="center_horizontal"
        android:text="@string/exportimport_import_dialog_keep_button"
        android:textColor="@color/colorPrimary"
        android:background="#FFFFFF"/>
</LinearLayout>

</LinearLayout>