<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".views.contact.Contact">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <ImageView
        android:id="@+id/imageViewMyPicture"
        android:layout_width="150dp"
        android:layout_height="225dp"
        android:layout_below="@+id/tool_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/contact_content_description_photo"
        android:src="@drawable/picture" />

    <TextView
        android:id="@+id/textViewAboutMe"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewMyPicture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/contact_about_me"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_black" />

    <Button
        android:id="@+id/buttonSendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewAboutMe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@null"
        android:drawableStart="@drawable/email_black"
        android:text="@string/contact_email"
        android:textAllCaps="false"
        android:textColor="@color/text_black" />


</RelativeLayout>
