<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.newtea.NewTea">

    <include
        android:id="@id/tool_bar"
        layout="@layout/tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/textViewTeaVariety"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/spinnerTeaVariety"
                android:layout_alignParentStart="true"
                android:layout_marginStart="4dip"
                android:layout_marginBottom="8dip"
                android:gravity="center_vertical"
                android:text="@string/newtea_tea_variety"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/grey" />

            <Spinner
                android:id="@+id/spinnerTeaVariety"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dip"
                android:layout_marginTop="10dip"
                android:layout_toEndOf="@+id/textViewTeaVariety"
                android:entries="@array/variety_teas"
                android:prompt="@string/newtea_tea_variety"
                android:spinnerMode="dialog"
                android:transitionName="Teeart" />

            <CheckBox
                android:id="@+id/checkBoxSelfInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/spinnerTeaVariety"
                android:layout_marginBottom="4dip"
                android:layout_toEndOf="@id/spinnerTeaVariety"
                android:text="@string/newtea_by_hand"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:theme="@style/CheckBoxStyle"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/editTextSelfInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/spinnerTeaVariety"
                android:layout_alignBottom="@id/spinnerTeaVariety"
                android:layout_alignParentStart="true"
                android:ems="10"
                android:hint="@string/newtea_tea_variety"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:theme="@style/EditTextStyle"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewChooseColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spinnerTeaVariety"
                android:layout_marginLeft="4dip"
                android:layout_marginTop="20dip"
                android:layout_marginRight="4dip"
                android:text="@string/newtea_color_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/grey" />

            <Button
                android:id="@+id/buttonColor"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="25dip"
                android:layout_below="@id/spinnerTeaVariety"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                android:layout_toEndOf="@id/textViewChooseColor"
                android:background="@drawable/button_color" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonColor"
                android:layout_marginTop="14dip"
                android:ems="10"
                android:hint="@string/newtea_hint_name"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:theme="@style/EditTextStyle" />

            <Spinner
                android:id="@+id/spinnerAmountUnit"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_below="@id/editTextName"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dip"
                android:layout_marginEnd="4dp"
                android:entries="@array/newtea_amount"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/editTextAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextName"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dip"
                android:layout_toStartOf="@id/spinnerAmountUnit"
                android:ems="10"
                android:hint="@string/newtea_hint_ts_other"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:theme="@style/EditTextStyle" />

            <ImageButton
                android:id="@+id/buttonAddInfusion"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/editTextAmount"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/newtea_tooltip_addinfusion"
                android:scaleType="fitXY"
                android:src="@drawable/add" />

            <ImageButton
                android:id="@+id/buttonDeleteInfusion"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignWithParentIfMissing="true"
                android:layout_below="@id/editTextAmount"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="4dp"
                android:layout_toStartOf="@id/buttonAddInfusion"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/newtea_tooltip_deleteinfusion"
                android:scaleType="fitXY"
                android:src="@drawable/delete"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/linearLayoutInfusions"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/editTextAmount"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="4dp"
                android:layout_toStartOf="@id/buttonDeleteInfusion">

                <ImageButton
                    android:id="@+id/buttonArrowLeft"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="4dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/newtea_tooltip_arrowleft"
                    android:scaleType="fitXY"
                    android:src="@drawable/button_arrowleft" />

                <TextView
                    android:id="@+id/textViewCountInfusion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/newtea_count_infusion_first"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/grey" />

                <ImageButton
                    android:id="@+id/buttonArrowRight"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/newtea_tooltip_arrowright"
                    android:scaleType="fitXY"
                    android:src="@drawable/button_arrowright" />

            </RelativeLayout>

            <ImageButton
                android:id="@+id/buttonShowCoolDownTime"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/linearLayoutInfusions"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dip"
                android:layout_marginEnd="4dip"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/newtea_tooltip_showcooldowntime"
                android:scaleType="fitXY"
                android:src="@drawable/arrowdown" />

            <EditText
                android:id="@+id/editTextTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayoutInfusions"
                android:layout_marginTop="10dip"
                android:layout_toStartOf="@+id/buttonShowCoolDownTime"
                android:ems="10"
                android:hint="@string/newtea_hint_celsius_other"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:theme="@style/EditTextStyle" />

            <ImageButton
                android:id="@+id/buttonAutofillCoolDownTime"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@+id/editTextTemperature"
                android:layout_alignParentStart="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/newtea_tooltip_autofillcooldowntime"
                android:scaleType="fitXY"
                android:src="@drawable/arrowright"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editTextCoolDownTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextTemperature"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dip"
                android:layout_marginEnd="4dp"
                android:layout_toEndOf="@+id/buttonAutofillCoolDownTime"
                android:ems="10"
                android:hint="@string/newtea_hint_cooldowntime"
                android:importantForAutofill="no"
                android:inputType="time"
                android:theme="@style/EditTextStyle"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextCoolDownTime"
                android:layout_marginTop="10dip"
                android:ems="10"
                android:hint="@string/newtea_hint_time_other"
                android:importantForAutofill="no"
                android:inputType="time"
                android:theme="@style/EditTextStyle" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
