<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewScaleAmountLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/showtea_dialog_amount_scala_left"
        android:textColor="@color/text_black" />

    <TextView
        android:id="@+id/textViewScaleAmountCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/showtea_dialog_amount_scala_center"
        android:textColor="@color/text_black" />

    <TextView
        android:id="@+id/textViewScaleAmountRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/showtea_dialog_amount_scala_right"
        android:textColor="@color/text_black" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBarAmountPerAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewScaleAmountCenter"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:max="20"
        android:progress="10" />

    <TextView
        android:id="@+id/textViewShowAmountPerAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBarAmountPerAmount"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_black" />

</RelativeLayout>